--- a/ds/stacks.ipynb
+++ b/ds/stacks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "competitive-arrest",
+   "id": "infrared-sapphire",
    "metadata": {},
    "source": [
     "\n",
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "decent-norwegian",
+   "id": "legislative-delaware",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "corrected-shopper",
+   "id": "about-baking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "prescribed-moisture",
+   "id": "ordinary-oliver",
    "metadata": {},
    "outputs": [
     {
@@ -583,15 +583,197 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exotic-mechanics",
+   "id": "varied-fields",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "id": "knowing-termination",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isodd(n):\n",
+    "    return (n&1) == 1 \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "divided-france",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isodd(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "extra-tenant",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nTrapping rain water\\n'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Trapping rain water\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "colonial-kelly",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"(1+(4+5+2)-3)+(6+8)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "understanding-corner",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['(1+(4+5+2', '-3', '+(6+8', '']"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.split(\")\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "retained-quest",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "valid paren\n",
+    "in: s = \"[(())]\"\n",
+    "out: true\n",
+    "\n",
+    "in: s = \"[)]\"\n",
+    "out: false\n",
+    "\"\"\"\n",
+    "def valid_paren(a):\n",
+    "    s = deque()\n",
+    "    d = {\"(\": \")\", \"[\": \"]\", \"{\": \"}\"}\n",
+    "    for i in range(len(a)):\n",
+    "        if a[i] in \"{[(\":\n",
+    "            s.appendleft(a[i])\n",
+    "        elif a[i] not in \"{[(\":\n",
+    "            if len(s) == 0:\n",
+    "                return False\n",
+    "            elif d[s[0]] == a[i]:\n",
+    "                s.popleft()\n",
+    "            else:\n",
+    "                return False\n",
+    "    \n",
+    "    return len(s) == 0\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "invisible-navigator",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([])\n",
+      "deque(['{'])\n",
+      "deque(['[', '{'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_paren(\"{[}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "involved-madonna",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = \"12312 \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "indie-willow",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' '"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eleven-guidance",
+   "id": "charming-bidding",
    "metadata": {},
    "outputs": [],
    "source": []
